ccache news
===========

ccache 3.7
----------
unreleased

Changes
~~~~~~~

* Fixed crash when the debug mode is enabled and the output file is in a
  non-writable directory, e.g. when the output file is `/dev/null`.

* Fixed an issue when printing very large log messages to the debug log.


ccache 3.6
----------
Release date: 2019-01-14

Changes
~~~~~~~

- ccache now has an opt-in ``depend mode''. When enabled, ccache never executes
  the preprocessor, which results in much lower cache miss overhead at the
  expense of a lower potential cache hit rate. The depend mode is only possible
  to use when the compiler option `-MD` or `-MMD` is used.

- Added support for GCC's `-ffile-prefix-map` option. The `-fmacro-prefix-map`
  option is now also skipped from the hash.

- Added support for multiple `-fsanitize-blacklist` arguments.

- ccache now includes the environment variables `LANG`, `LC_ALL`, `LC_CTYPE`
  and `LC_MESSAGES` in the hash since they may affect localization of compiler
  warning messages. Set sloppiness to `locale` to opt out of this.

- Fixed a problem due to Clang overwriting the output file when compiling an
  assembler file.

- Clarified the manual to explain the reasoning behind the “file_macro”
  sloppiness setting in a better way.

- ccache now handles several levels of nonexistent directories when rewriting
  absolute paths to relative.

- A new sloppiness setting `clang_index_store` makes ccache skip the Clang
  compiler option `-index-store-path` and its argument when computing the
  manifest hash. This is useful if you use Xcode, which uses an index store
  path derived from the local project path. Note that the index store won't be
  updated correctly on cache hits if you enable this option.

- Rename sloppiness `no_system_headers` to `system_headers` for consistency
  with other options. `no_system_headers` can still be used as an
  (undocumented) alias.

- The GCC variables “DEPENDENCIES_OUTPUT” and “SUNPRO_DEPENDENCIES” are now