@@ -275,6 +275,31 @@ base_tests() {
     expect_stat 'cache miss' 1
 
     # -------------------------------------------------------------------------
+    TEST "Directory is hashed if using -gsplit-dwarf"
+
+    mkdir dir1 dir2
+    cp test1.c dir1
+    cp test1.c dir2
+
+    export CCACHE_DEBUG=1
+
+    cd dir1
+    $CCACHE_COMPILE -c test1.c -gsplit-dwarf
+    expect_stat 'cache hit (preprocessed)' 0
+    expect_stat 'cache miss' 1
+    $CCACHE_COMPILE -c test1.c -gsplit-dwarf
+    expect_stat 'cache hit (preprocessed)' 1
+    expect_stat 'cache miss' 1
+
+    cd ../dir2
+    $CCACHE_COMPILE -c test1.c -gsplit-dwarf
+    expect_stat 'cache hit (preprocessed)' 1
+    expect_stat 'cache miss' 2
+    $CCACHE_COMPILE -c test1.c -gsplit-dwarf
+    expect_stat 'cache hit (preprocessed)' 2
+    expect_stat 'cache miss' 2
+
+    # -------------------------------------------------------------------------
     TEST "CCACHE_NOHASHDIR"
 
     mkdir dir1 dir2
